# terrafabric

./: CMakeLists.txt
assets/shaders/: chunk.vert  quad.frag  quad.vert  ray.frag  ray.vert  sprite.frag  sprite.vert
src/: main.cpp
src/components/: camera.h  mesh.h  transform.h
src/core/: application.cpp  application.h  input.cpp  input.h  renderer.cpp  renderer.h  resourcemanager.cpp  resourcemanager.h  timer.cpp  timer.h  window.cpp  window.h
src/game/: block.h  chunk.cpp  chunk.h  crosshair.cpp  crosshair.h  player.cpp  player.h  quad.cpp  quad.h  ray.h  raycast.cpp  raycast.h  world.cpp  world.h
src/rendering/: buffer.h  bufferlayout.h  renderer.cpp  renderer.h  shader.cpp  shader.h  texture.cpp  texture.h  vertexarray.cpp  vertexarray.h
